  listen to all addresses (rather than just loopback). The packet
  sniffer now accepts NMEA packets with the ECDIS packet leader 'EC'.
  SBAS satellites are now properly use-flagged in SiRF and UBX skyviews.
  The -G option now works under IPv6. Cross-build is now officially
  supported and instructions included.  gpsprof works again and does
  whole-cycle profiling. gpsd.php has Open Street Map support.

* Sun Aug 28 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.1
  The Irene release, rocking you like a hurricane and brought to you
  from the storm shelter in my basement. This is a snap release mainly
  to get some scons recipe cleanups out the door.  Parallelized builds
  now work. Small but fatal problems with reconfigure=no, netfeed=no
  and sock_export=no builds have been fixed.  Build recipe ported for
  Fedora, Darwin, FreeBSD and OpenBSD.  libgps now brings -lm with it
  on systems with implicit linking. One old bug fixed (code was
  previously present but broken): Under Linux, gpsd will refrain from
  opening serial or USB devices that another process has open,
  avoiding potential problems with class 0xFF USB devices opened by
  other programs.  One new bug fix: we now use an atof()
  implementation that ignores locale, avoiding problems where decimal
  point is a comma. One new feature: Change -N semantics so it only
  suppresses backgrounding; privileges are now dropped as in normal
  background operation.

* Fri Aug 19 2011 Eric S. Raymond <esr@snark.thyrsus.com> - 3.0
  POLL subobject name changes: fixes -> tpv, skyview -> sky.
  Fix a timestamp-clobbering bug in the C library revealed by an
  obscure car-nav device, the MyGuide 3100. The DEVICE 'activated'
  attribute becomes an ISO8601 string; the client libraries will
  still backward-compatibly read a float value. gps_unpack() is
  now a documented part of the library API. There is now a
  shared-memory export from the daemon that can be accessed through 