@@ -105,7 +105,6 @@ boolopts = (
     # Time service
     ("ntpshm",        True,  "NTP time hinting support"),
     ("pps",           True,  "PPS time syncing support"),
-    ("pps_on_cts",    False, "PPS pulse on CTS rather than DCD"),
     # Export methods
     ("socket_export", True,  "data export over sockets"),
     ("dbus_export",   False, "enable DBUS export support"),
@@ -151,6 +150,7 @@ nonboolopts = (
     ("limited_max_devices", 0,             "maximum allowed devices"),
     ("fixed_port_speed",    0,             "fixed serial port speed"),
     ("fixed_stop_bits",     0,             "fixed serial port stop bits"),
+    ("pps_pin",             "DCD",         "pin to expect PPS pulses on"),
     ("target",              "",            "cross-development target"),
     ("sysroot",             "",            "cross-development system root"),
     )
@@ -968,8 +968,17 @@ if st != 0:
 revision='#define REVISION "%s"\n' %(rev.strip(),)
 env.NoClean(env.Textfile(target="revision.h", source=[revision]))
 
+# generate pps_pin.h
+pps_pin = env['pps_pin']
+ppsh = '/* generated by scons from the pps_pin option - do not hand-hack */\n'
+ppsh += '#define PPS_LINE_NAME "%s"\n' % pps_pin
+tioc_map = {"DCD": "CAR"}
+ppsh += '#define PPS_LINE_TIOC TIOCM_%s\n' % tioc_map.get(pps_pin, pps_pin)
+ppsh += "/* end */\n"
+env.NoClean(env.Textfile(target="pps_pin.h", source=[ppsh]))
+
 generated_sources = ['packet_names.h', 'timebase.h', 'gpsd.h', "ais_json.i",
-                     'gps_maskdump.c', 'revision.h', 'gpsd.php']
+                     'gps_maskdump.c', 'revision.h', 'gpsd.php', 'pps_pin.h']
 
 # leapseconds.cache is a local cache for information on leapseconds issued
 # by the U.S. Naval observatory. It gets kept in the repository so we can
